--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
     </a>
 
     <nav class="site-nav" id="siteNav" aria-label="Primary">
-        <a href="index.html" class="">首页</a>
-        <a href="about.html" class="active">关于我们</a>
-        <a href="jobs.html" class="">招聘</a>
-        <a href="contact.html" class="">联系我们</a>
+        <a href="index.html" class="">Home</a>
+        <a href="about.html" class="active">About</a>
+        <a href="jobs.html" class="">Careers</a>
+        <a href="contact.html" class="">Contact</a>
     </nav>
     <button class="nav-toggle" type="button" aria-controls="siteNav" aria-expanded="false" aria-label="Open menu">
       <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -38,123 +38,118 @@
 
 <div class="banner about"></div>
 <div class="container">
-  <p>公司成立于 2025 年，是一家专注于 海外工具类应用与轻度休闲游戏 的研发团队， 以小团队、高效率的方式，快速将想法打磨成可上线、可变现的产品。 相比复杂架构，我们更看重 稳定、清晰、能长期迭代的产品能力。</p>
   <p>Founded in 2025, we are a development team focused on overseas utility applications and lightweight casual games.We work with a small, highly efficient team to quickly turn ideas into launch-ready, monetizable products.
 Rather than pursuing complex architectures, we value stability, clarity, and long-term iterative product capabilities.</p>
   
-  <div class="section-title"><h2>企业文化</h2><span>Culture</span></div>
+  <div class="section-title"><h2>Culture</h2></div>
   <div class="culture-grid">
     <div class="culture-card">
-      <img src="assets/img/culture-responsibility.jpg" alt="责任">
+      <img src="assets/img/culture-responsibility.jpg" alt="Simplicity">
       <div class="culture-body">
-        <h3>简单 · Simplicity</h3>
-        <p>专注于真正重要的事情，用简单高效的方式创造价值。</p>
+        <h3>Simplicity</h3>
         <p>We focus on what truly matters and create value through simplicity and efficiency.</p>
       </div>
     </div>
 
     <div class="culture-card">
-      <img src="assets/img/culture-trust.jpg" alt="信任">
+      <img src="assets/img/culture-trust.jpg" alt="Responsibility">
       <div class="culture-body">
-        <h3>责任 · Responsibility</h3>
-        <p>对产品负责，对用户负责，对彼此负责。</p>
+        <h3>Responsibility</h3>
         <p>We take responsibility for our products, our users, and each other.</p>
       </div>
     </div>
 
     <div class="culture-card">
-      <img src="assets/img/culture-joy.jpg" alt="快乐">
+      <img src="assets/img/culture-joy.jpg" alt="Growth">
       <div class="culture-body">
-        <h3>成长 · Growth</h3>
-        <p>在持续学习与挑战中，不断突破自我与边界。</p>
+        <h3>Growth</h3>
         <p>We grow by learning continuously and embracing new challenges.</p>
       </div>
     </div>
 
     <div class="culture-card">
-      <img src="assets/img/culture-growth.jpg" alt="成长">
+      <img src="assets/img/culture-growth.jpg" alt="Win-Win">
       <div class="culture-body">
-        <h3>共赢 · Win-Win</h3>
-        <p>与伙伴携手前行，实现长期、可持续的共赢。</p>
+        <h3>Win-Win</h3>
         <p>We work closely with our partners to achieve long-term, sustainable success together.</p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="section-title"><h2>福利待遇</h2><span>Welfare Benefits</span></div>
+<div class="section-title"><h2>Benefits</h2></div>
 
 
 <div class="container welfare-wrap">
   <div class="welfare-mosaic">
   <div class="welfare-tile t1">
     <div class="welfare-content">
-      <div class="welfare-title">工作时间</div>
+      <div class="welfare-title">Working Hours</div>
       <div class="welfare-detail">
-        <p>周末双休，五天7.5小时制：上班时间：9：30-12：30 14：00-19：00</p>
+        <p>Weekends off. 7.5 hours/day, 5 days/week (09:30–12:30, 14:00–19:00).</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t2">
     <div class="welfare-content">
-      <div class="welfare-title">五险一金</div>
+      <div class="welfare-title">Social Insurance & Housing Fund</div>
       <div class="welfare-detail">
-        <p>入职即为员工缴纳社保和公积金，为员工的健康生活保驾护航</p>
+        <p>We provide statutory social insurance and housing fund contributions from day one.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t3">
     <div class="welfare-content">
-      <div class="welfare-title">带薪年假</div>
+      <div class="welfare-title">Paid Annual Leave</div>
       <div class="welfare-detail">
-        <p>公司提供完善的休假制度，按法定节假日休息，享受带薪假期、带薪年假等</p>
+        <p>The company offers a comprehensive leave policy, including statutory public holidays, paid leave, and paid annual leave.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t4">
     <div class="welfare-content">
-      <div class="welfare-title">生活补助</div>
+      <div class="welfare-title">Meal & Daily Perks</div>
       <div class="welfare-detail">
-        <p>员工为每位员工提供用餐补贴，每日还有丰富的下午茶和水果</p>
+        <p>Meal allowance plus snacks, afternoon tea, and fruit.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t5">
     <div class="welfare-content">
-      <div class="welfare-title">年终福利</div>
+      <div class="welfare-title">Year-End Bonus</div>
       <div class="welfare-detail">
-        <p>年终奖金根据个人表现，公司流水情况发放</p>
+        <p>Year-end bonus based on individual performance and company results.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t6">
     <div class="welfare-content">
-      <div class="welfare-title">员工关怀</div>
+      <div class="welfare-title">Employee Care</div>
       <div class="welfare-detail">
-        <p>生日礼品、传统节礼品及年度免费健康体检</p>
+        <p>Birthday gifts, holiday gifts, and annual health checkups.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t7">
     <div class="welfare-content">
-      <div class="welfare-title">员工活动</div>
+      <div class="welfare-title">Team Activities</div>
       <div class="welfare-detail">
-        <p>年度旅游、月度团建经费、每周球类活动及户外拓展等丰富的员工活动</p>
+        <p>A wide range of employee activities, including annual company trips, monthly team-building budgets, weekly sports activities, and outdoor team-building events.</p>
       </div>
     </div>
   </div>
 
   <div class="welfare-tile t8">
     <div class="welfare-content">
-      <div class="welfare-title">职业发展</div>
+      <div class="welfare-title">Career Growth</div>
       <div class="welfare-detail">
-        <p>高效的沟通机制、清晰的晋升通道、公平的竞争体制、广阔的发展空间</p>
+        <p>Efficient communication, clear promotion paths, fair evaluation, and room to grow.</p>
       </div>
     </div>
   </div>
@@ -165,12 +160,11 @@ Rather than pursuing complex architectures, we value stability, clarity, and lon
   <div class="footer">
   <div class="inner">
     <div>
-      <a href="privacy.html?lang=en" target="_blank" rel="noopener noreferrer" id="privacyLink" id="privacyLink" target="_blank" rel="noopener noreferrer">隐私政策</a> |
-      <a href="terms.html?lang=en" target="_blank" rel="noopener noreferrer" id="termsLink" id="termsLink" target="_blank" rel="noopener noreferrer">使用条款</a>
+      <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyLink" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+      <a href="terms.html" target="_blank" rel="noopener noreferrer" id="termsLink" target="_blank" rel="noopener noreferrer">Terms of Use</a>
     </div>
     <div style="margin-top:10px">Copyright © 2026 Hola Star</div>
   </div>
 </div>
-<script src="assets/js/lang.js"></script>
 <script src="assets/main.js"></script>
 </body></html>
