--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
     </a>
 
     <nav class="site-nav" id="siteNav" aria-label="Primary">
-        <a href="index.html" class="">首页</a>
-        <a href="about.html" class="">关于我们</a>
-        <a href="jobs.html" class="">招聘</a>
-        <a href="contact.html" class="active">联系我们</a>
+        <a href="index.html" class="">Home</a>
+        <a href="about.html" class="">About</a>
+        <a href="jobs.html" class="">Careers</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
     <button class="nav-toggle" type="button" aria-controls="siteNav" aria-expanded="false" aria-label="Open menu">
       <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -43,13 +43,13 @@
     <section class="section contact-section">
       <div class="contact-grid">
         <div class="contact-item">
-          <h3>邮箱</h3>
+          <h3>Email</h3>
           <p><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
         </div>
 
         <div class="contact-item">
-          <h3>地址</h3>
-          <p>北京市海淀区西小口路66号东升科技园B6楼C座402</p>
+          <h3>Address</h3>
+          <p>Room 402, Block C, Building B6, Dongsheng Science & Technology Park, 66 Xixiaokou Road, Haidian District, Beijing, China</p>
         </div>
       </div>
     </section>
@@ -58,12 +58,11 @@
 <div class="footer">
   <div class="inner">
     <div>
-      <a href="privacy.html?lang=en" target="_blank" rel="noopener noreferrer" id="privacyLink" id="privacyLink" target="_blank" rel="noopener noreferrer">隐私政策</a> |
-      <a href="terms.html?lang=en" target="_blank" rel="noopener noreferrer" id="termsLink" id="termsLink" target="_blank" rel="noopener noreferrer">使用条款</a>
+      <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyLink" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+      <a href="terms.html" target="_blank" rel="noopener noreferrer" id="termsLink" target="_blank" rel="noopener noreferrer">Terms of Use</a>
     </div>
     <div style="margin-top:10px">Copyright © 2026 Hola Star</div>
   </div>
 </div>
-<script src="assets/js/lang.js"></script>
 <script src="assets/main.js"></script>
 </body></html>
