--- a/jobs.html
+++ b/jobs.html
@@ -22,10 +22,10 @@
     </a>
 
     <nav class="site-nav" id="siteNav" aria-label="Primary">
-        <a href="index.html" class="">首页</a>
-        <a href="about.html" class="">关于我们</a>
-        <a href="jobs.html" class="active">招聘</a>
-        <a href="contact.html" class="">联系我们</a>
+        <a href="index.html" class="">Home</a>
+        <a href="about.html" class="">About</a>
+        <a href="jobs.html" class="active">Careers</a>
+        <a href="contact.html" class="">Contact</a>
     </nav>
     <button class="nav-toggle" type="button" aria-controls="siteNav" aria-expanded="false" aria-label="Open menu">
       <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -39,100 +39,100 @@
 <div class="banner jobs"></div>
 <div class="container">
 <table class="jobs-table">
-<thead><tr><th>岗位</th><th>类别</th><th>人数</th><th>更新时间</th></tr></thead>
+<thead><tr><th>Role</th><th>Category</th><th>Openings</th><th>Updated</th></tr></thead>
 
 <tbody>
-<tr class="job-row" data-id="u1"><td>Unity 游戏开发工程师（轻度休闲）</td><td>技术类</td><td>1</td><td>2026-01-15</td></tr>
+<tr class="job-row" data-id="u1"><td>Unity Game Developer (Casual/Puzzle)</td><td>Engineering</td><td>1</td><td>2026-01-15</td></tr>
 <tr class="job-detail" data-parent="u1"><td colspan="4">
-<h4>工作内容（你未来每天会做什么）</h4>
+<h4>What you'll do</h4>
 <ol>
-  <li>使用 Unity 开发轻度休闲 / 益智类游戏</li>
-  <li>根据策划文档，实现核心玩法与基础系统</li>
-  <li>完成 UI 适配、基础动画、音效触发</li>
-  <li>与策划 / 美术协作，快速迭代玩法</li>
-  <li>进行基本测试、Bug 修复和版本优化</li>
-  <li>负责 Android / iOS 的打包与发布支持</li>
-  <li>接入并维护常见第三方 SDK（广告 / 统计）</li>
+  <li>Develop casual/puzzle games in Unity.</li>
+  <li>Implement core gameplay and foundational systems based on design specs.</li>
+  <li>Handle UI adaptation, basic animations, and SFX triggers.</li>
+  <li>Collaborate with design and art to iterate quickly.</li>
+  <li>Do basic testing, bug fixing, and performance optimization.</li>
+  <li>Support Android/iOS builds and releases.</li>
+  <li>Integrate and maintain common third‑party SDKs (ads/analytics).</li>
 </ol>
-<h4>我们希望你具备的能力（必须项）</h4>
+<h4>What we’re looking for (must-have)</h4>
 <ol>
-  <li>5年以上 Unity 实际开发经验</li>
-  <li>至少参与过 1 款完整上线的 Unity 游戏</li>
-  <li>熟悉轻度休闲 / 益智类游戏开发流程</li>
-  <li>熟悉 Unity 常用组件、UI 系统</li>
-  <li>能独立完成简单玩法模块的开发</li>
-  <li>有较好的问题排查和沟通能力</li>
+  <li>5+ years of hands-on Unity development experience.</li>
+  <li>Shipped at least 1 Unity game end-to-end.</li>
+  <li>Familiar with casual/puzzle game development workflows.</li>
+  <li>Strong knowledge of Unity components and UI system.</li>
+  <li>Able to independently deliver small gameplay modules.</li>
+  <li>Good debugging and communication skills.</li>
 </ol>
-<h4>加分项（有就很好，没有也没关系）</h4>
+<h4>Nice to have</h4>
 <ol>
-  <li>有拼图 / 消除 / 点击 / 拖拽类玩法经验</li>
-  <li>有广告 SDK（AdMob / Unity Ads 等）接入经验</li>
-  <li>有海外市场项目经验</li>
-  <li>能进行简单性能优化</li>
+  <li>Experience with puzzle/match/click/drag mechanics.</li>
+  <li>Experience integrating ad SDKs (e.g., AdMob, Unity Ads).</li>
+  <li>Experience with products for overseas markets.</li>
+  <li>Able to do basic performance optimizations.</li>
 </ol>
-<p class="job-meta"><b>投递邮箱：</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
+<p class="job-meta"><b>Email:</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
 </td></tr>
 
-<tr class="job-row" data-id="u2"><td>iOS / Android 开发工程师（工具类应用 · 兼顾轻度游戏）</td><td>技术类</td><td>1</td><td>2026-01-15</td></tr>
+<tr class="job-row" data-id="u2"><td>iOS/Android Engineer (Utility Apps + Light Games)</td><td>Engineering</td><td>1</td><td>2026-01-15</td></tr>
 <tr class="job-detail" data-parent="u2"><td colspan="4">
-<h4>工作内容（你未来每天会做什么）</h4>
+<h4>What you'll do</h4>
 <ol>
-  <li>负责海外工具类应用的 iOS / Android 客户端开发</li>
-  <li>根据产品需求，实现核心功能与基础业务逻辑</li>
-  <li>负责页面结构、交互逻辑与数据处理的实现</li>
-  <li>接入并维护第三方 SDK（广告 / 统计 / 归因 / 登录等）</li>
-  <li>与 Unity / 游戏开发协作，对接工具与游戏相关能力</li>
-  <li>负责 iOS / Android 打包、上架、审核及版本更新</li>
-  <li>排查线上问题，进行稳定性与基础性能优化</li>
+  <li>Build iOS/Android clients for overseas utility apps.</li>
+  <li>Implement core features and business logic based on product requirements.</li>
+  <li>Deliver UI screens, interaction logic, and data handling.</li>
+  <li>Integrate and maintain third‑party SDKs (ads/analytics/attribution/login, etc.).</li>
+  <li>Work with Unity/game team on shared capabilities between apps and games.</li>
+  <li>Handle packaging, store submission, review, and updates.</li>
+  <li>Troubleshoot production issues and improve stability/performance.</li>
 </ol>
-<h4>我们希望你具备的能力（必须项）</h4>
+<h4>What we’re looking for (must-have)</h4>
 <ol>
-  <li>5年以上 iOS 或 Android 实际开发经验</li>
-  <li>熟悉 iOS（Swift / Objective-C）或 Android（Kotlin / Java）开发</li>
-  <li>至少参与过 1 款完整上线的工具类 App 或应用型产品</li>
-  <li>熟悉常见移动端 UI 结构与页面交互逻辑</li>
-  <li>能独立完成基础功能模块与问题排查</li>
-  <li>有良好的沟通能力，能与产品 / Unity / 设计协作推进项目</li>
+  <li>5+ years of hands-on iOS or Android development experience.</li>
+  <li>Proficient in iOS (Swift/Objective‑C) or Android (Kotlin/Java).</li>
+  <li>Shipped at least 1 utility app or consumer product end-to-end.</li>
+  <li>Solid understanding of mobile UI structures and interactions.</li>
+  <li>Able to own modules and debug issues independently.</li>
+  <li>Great communication; can collaborate with PM/Unity/design to move projects forward.</li>
 </ol>
-<h4>加分项（有就很好，没有也没关系）</h4>
+<h4>Nice to have</h4>
 <ol>
-  <li>有工具类、效率类、内容类 App 开发经验</li>
-  <li>有广告变现或订阅（IAP）相关经验</li>
-  <li>有海外市场上架、审核、账号维护经验</li>
-  <li>有游戏或 Unity 项目协作经验</li>
+  <li>Experience with utility/productivity/content apps.</li>
+  <li>Experience with monetization (ads) or subscriptions/IAP.</li>
+  <li>Experience with overseas store launches, reviews, and account operations.</li>
+  <li>Experience collaborating on game/Unity projects.</li>
 </ol>
-<p class="job-meta"><b>投递邮箱：</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
+<p class="job-meta"><b>Email:</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
 </td></tr>
 
-<tr class="job-row" data-id="u3"><td>UI 设计师（工具应用 · 兼顾轻度游戏美术）</td><td>设计类</td><td>1</td><td>2026-01-15</td></tr>
+<tr class="job-row" data-id="u3"><td>UI Designer (Utility Apps + Casual Games)</td><td>Design</td><td>1</td><td>2026-01-15</td></tr>
 <tr class="job-detail" data-parent="u3"><td colspan="4">
-<h4>工作内容（你未来每天会做什么）</h4>
+<h4>What you'll do</h4>
 <ol>
-  <li>负责工具类应用的 UI 设计（功能页 / 列表页 / 设置页等）</li>
-  <li>兼顾轻度休闲游戏的 UI 与基础美术风格设计</li>
-  <li>根据产品定位，制定并维护整体视觉风格</li>
-  <li>输出完整 UI 设计稿、切图与标注资源</li>
-  <li>与产品 / Unity / 客户端开发协作，推动设计落地</li>
-  <li>根据数据反馈或迭代需求，持续优化 UI 表现</li>
-  <li>参与新产品或新玩法的前期视觉探索</li>
+  <li>Design UI for utility apps (feature/list/settings screens, etc.).</li>
+  <li>Also support UI and baseline art style for casual games.</li>
+  <li>Define and maintain the overall visual style.</li>
+  <li>Deliver full UI specs, assets, and annotations.</li>
+  <li>Work with PM/Unity/mobile engineers to ship designs.</li>
+  <li>Continuously improve UI based on data and iteration needs.</li>
+  <li>Explore early visual directions for new products and gameplay.</li>
 </ol>
-<h4>我们希望你具备的能力（必须项）</h4>
+<h4>What we’re looking for (must-have)</h4>
 <ol>
-  <li>3年以上 UI 设计经验（偏移动端）</li>
-  <li>有工具类 App 或移动应用的 UI 设计经验</li>
-  <li>熟练使用 Figma / Sketch / Photoshop 等设计工具</li>
-  <li>理解移动端交互逻辑，而不仅是视觉表现</li>
-  <li>能在「功能清晰」与「视觉吸引」之间做平衡</li>
-  <li>沟通顺畅，能与产品和程序高效协作</li>
+  <li>3+ years of UI design experience (mobile-focused).</li>
+  <li>UI design experience for utility apps or mobile products.</li>
+  <li>Proficient with Figma/Sketch/Photoshop or similar tools.</li>
+  <li>Understands mobile interaction patterns, not just visuals.</li>
+  <li>Can balance clarity of function with visual appeal.</li>
+  <li>Strong collaboration skills with PMs and engineers.</li>
 </ol>
-<h4>加分项（有就很好，没有也没关系）</h4>
+<h4>Nice to have</h4>
 <ol>
-  <li>有轻度休闲 / 超休闲游戏 UI 或美术经验</li>
-  <li>熟悉海外工具类应用常见设计风格</li>
-  <li>有基础动效 / Lottie / 简单动画经验</li>
-  <li>对用户留存、点击率、转化有基本理解</li>
+  <li>UI/art experience in casual/hyper-casual games.</li>
+  <li>Familiar with common design styles of overseas utility apps.</li>
+  <li>Experience with basic motion (Lottie/simple animations).</li>
+  <li>Basic understanding of retention, CTR, and conversion.</li>
 </ol>
-<p class="job-meta"><b>投递邮箱：</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
+<p class="job-meta"><b>Email:</b><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
 </td></tr>
 
 </tbody>
@@ -147,11 +147,10 @@
   <div class="footer">
   <div class="inner">
     <div>
-      <a href="privacy.html?lang=en" target="_blank" rel="noopener noreferrer" id="privacyLink" id="privacyLink" target="_blank" rel="noopener noreferrer">隐私政策</a> |
-      <a href="terms.html?lang=en" target="_blank" rel="noopener noreferrer" id="termsLink" id="termsLink" target="_blank" rel="noopener noreferrer">使用条款</a>
+      <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyLink" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+      <a href="terms.html" target="_blank" rel="noopener noreferrer" id="termsLink" target="_blank" rel="noopener noreferrer">Terms of Use</a>
     </div>
     <div style="margin-top:10px">Copyright © 2026 Hola Star</div>
   </div>
 </div>
-<script src="assets/js/lang.js"></script>
 </body></html>
