--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </a>
 
     <nav class="site-nav" id="siteNav" aria-label="Primary">
-        <a href="index.html" class="active">首页</a>
-        <a href="about.html" class="">关于我们</a>
-        <a href="jobs.html" class="">招聘</a>
-        <a href="contact.html" class="">联系我们</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html" class="">About</a>
+        <a href="jobs.html" class="">Careers</a>
+        <a href="contact.html" class="">Contact</a>
     </nav>
     <button class="nav-toggle" type="button" aria-controls="siteNav" aria-expanded="false" aria-label="Open menu">
       <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
@@ -38,17 +38,9 @@
 
 <div class="banner home"></div>
 <div class="container">
-	  <div class="white-card bilingual">
-	    <div class="bilingual-col">
-	      <h2>坚持精品，专注长期价值</h2>
-	      <p>我们专注于工具产品与游戏，以稳定、清晰、可持续迭代为核心，为全球用户提供真正有价值的产品体验。</p>
-	    </div>
-	    <div class="bilingual-divider" aria-hidden="true"></div>
-	    <div class="bilingual-col">
-	      <h2>Quality Products, Long-Term Value</h2>
-	      <p>We create reliable and well-crafted tools and games for users worldwide, focusing on clarity, sustainability, and long-term product value.</p>
-	    </div>
-	  </div>
+	  <div class="white-card">
+  <h2>Quality Products, Long-Term Value</h2>
+  <p>We create reliable and well-crafted tools and games for users worldwide, focusing on clarity, sustainability, and long-term product value.</p>
 </div>
 
 
@@ -57,12 +49,11 @@
   <div class="footer">
   <div class="inner">
     <div>
-      <a href="privacy.html?lang=en" target="_blank" rel="noopener noreferrer" id="privacyLink" id="privacyLink" target="_blank" rel="noopener noreferrer">隐私政策</a> |
-      <a href="terms.html?lang=en" target="_blank" rel="noopener noreferrer" id="termsLink" id="termsLink" target="_blank" rel="noopener noreferrer">使用条款</a>
+      <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyLink" target="_blank" rel="noopener noreferrer">Privacy Policy</a> |
+      <a href="terms.html" target="_blank" rel="noopener noreferrer" id="termsLink" target="_blank" rel="noopener noreferrer">Terms of Use</a>
     </div>
     <div style="margin-top:10px">Copyright © 2026 Hola Star</div>
   </div>
 </div>
-<script src="assets/js/lang.js"></script>
 <script src="assets/main.js"></script>
 </body></html>
