--- a/contact.html
+++ b/contact.html
@@ -41,17 +41,12 @@
 
   <div class="container">
     <section class="section contact-section">
-      <div class="contact-grid">
+      <div class="contact-grid single">
         <div class="contact-item">
           <h3>Email</h3>
           <p><a href="mailto:contact@holastar.cc">contact@holastar.cc</a></p>
         </div>
-
-        <div class="contact-item">
-          <h3>Address</h3>
-          <p>Room 402, Block C, Building B6, Dongsheng Science & Technology Park, 66 Xixiaokou Road, Haidian District, Beijing, China</p>
-        </div>
-      </div>
+</div>
     </section>
   </div>
 
